--- a/dz9_3.html
+++ b/dz9_3.html
@@ -7,6 +7,14 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	
+	<div class="header">
+		<ul>
+			<li><a href="#"><img src="icon.png" alt="icon"></a></li>
+			<li><a href="#">Home</a></li>
+			<li><a href="#">Homework</a></li>
+			<li><a href="#">Settings</a></li>
+			<li><a href="#"><img src="av_64.png" alt=""></a></li>
+		</ul>
+	</div>
 </body>
 </html>
