--- a/dz9_3.html
+++ b/dz9_3.html
@@ -16,5 +16,8 @@
 			<li><a href="#"><img src="av_64.png" alt=""></a></li>
 		</ul>
 	</div>
+	<div class="settings">
+		Settings
+	</div>
 </body>
 </html>
