--- a/dz9_3.html
+++ b/dz9_3.html
@@ -19,5 +19,13 @@
 	<div class="settings">
 		Settings
 	</div>
+	<div class="forms">
+		<ul>
+			<li>Avatar</li>
+			<li>Student`s info</li>
+			<li>Change password</li>
+		</ul>
+
+	</div>
 </body>
 </html>
