--- a/dz9_3.html
+++ b/dz9_3.html
@@ -28,7 +28,7 @@
 		<div class="form">
      <form action="#" method="post" id="avatar">
      	<img src="av_256.png" alt="ava">
-     	<input type="file" id="ava">
+     	<input type="file" id="ava" accept=".jpg, .png">
      	<label for="ava">
      		<div class="photo">Choose foto</div>
      	</label>
